[SELC-8454] New getUserOtpEmailInfo API
